# Open-Database-Audit-Project

./: README
client/: CachedUserInfo.h  CachedUserManager.h  EventQueue.h  Makefile  Makefile.in  Threads.cpp  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  install-sh  install.sh  libtool  odap.spec
client/autom4te.cache/: output.0  output.1  output.4  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
client/capture/database/: DB2Connection.cpp  DB2Connection.cpp~  DB2Connection.h  DatabaseConnection.cpp  DatabaseConnection.cpp~  DatabaseConnection.h  DatabaseConnection.h~  MySQLConnection.cpp~  MySQLConnection.h~
client/debian/: README  README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  odap-client.cron.d.ex  odap-client.default.ex  odap-client.doc-base.EX  odap-client.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
client/debian/odap-client/DEBIAN/: conffiles  control  md5sums
client/debian/odap-client/etc/init.d/: odap
client/debian/odap-client/etc/odap/: log4j.properties
client/include/: charsets.cpp
client/kernel/linux/: Makefile  odap_monitor.c
client/m4/: boost.m4  thrift.m4  thrift.m4~
client/src/: CachedUserInfo.cpp  CachedUserManager.cpp  ConfigFile.cpp  ConfigFile.h  EventQueue.cpp  Makefile  Makefile.am  Makefile.am~  Makefile.in  Threads.cpp  Threads.h  log4j.properties  main.cpp
client/src/.deps/: odap-AuditEvent.Po  odap-CachedUserInfo.Po  odap-CachedUserManager.Po  odap-Config.Po  odap-ConfigFile.Po  odap-DB2Connection.Po  odap-DatabaseConnection.Po  odap-EventQueue.Po  odap-MySQLConnection.Po  odap-Threads.Po  odap-auditevent_constants.Po  odap-auditevent_types.Po  odap-charsets.Po  odap-main.Po
client/src/capture/database/: DatabaseConnection.cpp  DatabaseConnection.h  Makefile.am~  MySQLConnection.cpp  MySQLConnection.h
client/src/capture/database/.deps/: libdatabase_la-DB2Connection.Plo  libdatabase_la-DatabaseConnection.Plo  libdatabase_la-MySQLConnection.Plo
client/src/include/: charsets.h
client/src/include/.deps/: charsets.Plo
client/src/init.d/: odap
client/src/protocol/: AuditEvent.cpp  AuditEvent.h  Config.cpp  Config.h  auditevent_constants.cpp  auditevent_constants.h  auditevent_types.cpp  auditevent_types.h
config/: certificate.pem  log4j.properties
schema/: hive-hbase.schema
server/: pom.xml
thrift/: AuditEvent.thrift  Makefile  UICommProtocol.thrift
(+90 files in other folders)
